--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <img src="img/logo.svg" alt="" />
         </div>
         <!-- Menu Items -->
-        <div class="hidden space-x-6 md:flex font-poppins">
+        <div class="hidden space-x-6 md:flex">
           <a href="#" class="hover:text-darkGrayishBlue">Pricing</a>
           <a href="#" class="hover:text-darkGrayishBlue">Product</a>
           <a href="#" class="hover:text-darkGrayishBlue">About Us</a>
@@ -225,23 +225,6 @@
               everyone motivated.”
             </p>
           </div>
-
-
-                    <!-- Testimonial 1 -->
-                    <div
-                    class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:w-1/3 pt-14"
-                  >
-                    <img src="img/avatar-anisha.png" class="w-16 -mt-14" alt="" />
-                    <h5 class="text-lg font-bold">Anisha Li</h5>
-                    <p class="text-sm text-darkGrayishBlue">
-                      “Manage has supercharged our team’s workflow. The ability to
-                      maintain visibility on larger milestones at all times keeps
-                      everyone motivated.”
-                    </p>
-                  </div>
-
-
-
 
           <!-- Testimonial 2 -->
           <div
